# helloffmpeg

./: local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/dengkewu/helloffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/dengkewu/helloffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
